log
Wed, Apr 16, 2025  8:32:54 AM: 
 hashmap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:61:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   61 |     mapa->buckets = (Pair*) malloc(sizeof(Pair) * capacity); //resevamos para toda la capacidad;
      |                   ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:32:59 AM: 
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:61:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   61 |     mapa->buckets = (Pair*) malloc(sizeof(Pair) * capacity); //resevamos para toda la capacidad;
      |                   ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
ed100a7
Wed, Apr 16, 2025  8:33:04 AM: 
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:61:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   61 |     mapa->buckets = (Pair*) malloc(sizeof(Pair) * capacity); //resevamos para toda la capacidad;
      |                   ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
8edeaf1
Wed, Apr 16, 2025  8:34:45 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
2a83a90
Wed, Apr 16, 2025  8:34:50 AM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
67f8d8f
Wed, Apr 16, 2025  8:35:50 AM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
0f800d1
Wed, Apr 16, 2025  8:35:59 AM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
a8b0da2
Wed, Apr 16, 2025  9:03:02 AM: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
943e614
Wed, Apr 16, 2025  8:54:02 PM: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
1fff7d1
Wed, Apr 16, 2025  8:54:13 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5d2223a
Wed, Apr 16, 2025  8:54:15 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
2e143c6
Wed, Apr 16, 2025  8:55:15 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
b3c5b5e
Wed, Apr 16, 2025  9:01:18 PM: 
 tests:  4|5
total_score: 20/70
d6ba817
Wed, Apr 16, 2025  9:10:11 PM: 
 hashmap.c | 30 +++++++++---------------------
 1 file changed, 9 insertions(+), 21 deletions(-)
 tests:  5|5
total_score: 20/70
af23f5d
Wed, Apr 16, 2025  9:16:17 PM: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  7|4
total_score: 30/70
bc2d3e0
Wed, Apr 16, 2025  9:16:59 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
3117d2b
Wed, Apr 16, 2025  9:17:48 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
8f0ad41
Wed, Apr 16, 2025  9:23:26 PM: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|2
total_score: 50/70
880adca
Fri, Apr 18, 2025  4:52:30 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
7c65964
Fri, Apr 18, 2025  4:54:54 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bf5ebdb
Fri, Apr 18, 2025  5:05:11 PM: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|0
f20d382
Fri, Apr 18, 2025  5:12:08 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
7d6355d
Fri, Apr 18, 2025  5:13:35 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|2
total_score: 50/70
4ab3eca
Fri, Apr 18, 2025  5:15:03 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
5d77810
Fri, Apr 18, 2025  5:15:32 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
80a31a8
Fri, Apr 18, 2025  5:16:42 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
dc8491d
Fri, Apr 18, 2025  5:20:44 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  13|2
total_score: 50/70
531bd17
Fri, Apr 18, 2025  5:21:43 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
baa3752
Fri, Apr 18, 2025  5:22:47 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  13|2
total_score: 50/70
2f22b4d
Fri, Apr 18, 2025  5:23:09 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
8b0b6d2
Fri, Apr 18, 2025  5:24:31 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  16|1
total_score: 60/70
bd8c6f8
Fri, Apr 18, 2025  5:56:15 PM: 
 hashmap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
047a312
